--- a/backend/.env
+++ b/backend/.env
@@ -1,7 +1,8 @@
 DB_USER=postgres
 DB_HOST=localhost
 DB_NAME=edusync
-DB_PASSWORD=nintendo11
+DB_PASSWORD=235933
 DB_PORT=5432
 JWT_SECRET=your_jwt_secret_key
 PORT=5000
+DATABASE_URL=postgresql://postgres.hbhikfcujqcrpvwtxkcm:[wali0112230754]@aws-0-ap-southeast-1.pooler.supabase.com:5432/postgres
